Enable left/right arrow keys in game, fix setting input box alignment

--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,19 @@ button:hover {
 }
 .settings-header span {
     flex: 1 1 150px;
+    text-align: center;
 }
 .settings label input[type="number"] {
     width: 50px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    justify-self: center;
 }
 .settings label input[type="checkbox"] {
     width: auto;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    justify-self: center;
 }
